
2003-01-19	Gaurav Vaish <gvaish_mono AT lycos.com>

	* Command.cs             : Initial implementation.
	* IObjectListFieldCollection.cs
	                         : F*** the docs. Use only reflection
	                           to get the correct methods / properties.
	* TextControl.cs         : Implemented.
	* ObjectListCommandEventArgs/Handler.cs
	                         : Implemented.
	* MobileListItem.cs      : Initial Implementation.
	* ObjectListItem.cs      : Initial Implementation.
	* ObjectList.cs          : Initial Implementation.
	* TemplateContainer.cs   : Initial Implementation.

2003-01-18	Gaurav Vaish <gvaish_mono AT lycos.com>

	* Constants.cs           : Undocumented class. Reflection revealed.	
	                           Implemented.

2003-01-18	Gaurav Vaish <gvaish_mono AT lycos.com>

	* ArrayListCollectionBase.cs
	                         : Implemented.

2003-01-14	Gaurav Vaish <gvaish_mono AT lycos.com>

	* *.cs                   : Update the year in copyright notice.

2003-01-13	Gaurav Vaish <gvaish_mono AT lycos.com>

	* Label.cs               : The smallest class on this earth.

2003-01-12	Gaurav Vaish <gvaish_mono AT lycos.com>

	* MobileControl.cs       : Stub-ing completed. ;-)
	* ControlPager.cs        : Dummy implementation.

2003-01-12	Gaurav Vaish <gvaish_mono AT lycos.com>

	* FontInfo.cs            : Implemented.
	* Form.cs                : Initial implementation.
	* Panel.cs               : Initial implementation.
	* MobileControl.cs       : Stubbed all properties.

2003-01-10	Gaurav Vaish <gvaish_mono AT lycos.com>

	* DeviceSpecific.cs      : Dummy implementation.
	* MobilePage.cs          : GetControlAdapter(MobileControl) - Stubbed.
	* MobileControl.cs       : Adapter        { get; }      - Implemented
	                         : BreakAfter     { get; set; } - Stubbed.
	                         : DeviceSpecific { get; set; } - Stubbed.
	                         : MobilePage     { get; }      - Stubbed.
